--- a/RepData_PeerAssessment2.Rmd
+++ b/RepData_PeerAssessment2.Rmd
@@ -16,10 +16,17 @@ knitr::opts_chunk$set(message = FALSE, warning = FALSE)
 ```
 
 ### Synopsis
-```{r synopsis, include = FALSE, echo = FALSE, ref.label = c("loadData", "convDates", "deaths", "injuries")}
-x <- allDeaths
+```{r synopsis, include = FALSE, echo = FALSE, ref.label = c("loadData", "convDates", "updateValues", "deaths", "injuries", "economic")}
 ```
-Total deaths is `r allDeaths`  
+The NOAA storm database is an official publication of the National Oceanic and Atmospheric Administration (NOAA).  It holds data relating to storm events which have been registered between `r format(min(sData$BGN_DATE, na.rm = TRUE),"%B %Y")` and `r format(max(sData$END_DATE, na.rm = TRUE),"%B %Y")`.  
+  
+This analysis focuses upon the most serious recorded storm events in relation to their population health and economic consequences.  
+  
+Headlines derived from the dataset are:  
+  
+* Most deaths are caused by the event **`r head(mostDeaths$EVTYPE, 1)`**, which accounts for `r sprintf("%.1f%%", 100 * head(mostDeaths$pc, 1))` of all recorded storm deaths (`r format(head(mostDeaths$tDeaths, 1), big.mark = ",")` deaths).  
+* Most injuries are caused by the event **`r head(mostInjuries$EVTYPE, 1)`**, which accounts for `r sprintf("%.1f%%", 100 * head(mostInjuries$pc, 1))` of all recorded injuries (`r format(head(mostInjuries$tInjuries, 1), big.mark = ",")` injuries).  
+* The most economic damage is caused by the event **`r head(mostEcon$EVTYPE, 1)`**, which accounts for `r sprintf("%.1f%%", 100 * head(mostEcon$pc, 1))` of all recorded damage (`r dollar(round(head(mostEcon$tEcon, 1),1), big.mark = ",")` billion).  
   
 ### Data Processing
 
@@ -45,10 +52,25 @@ Convert the start/end date fields so they conform with POSIXct standards and can
 ```{r convDates}
 sData$BGN_DATE <- strptime(sData$BGN_DATE, "%m/%d/%Y %H:%M:%S")
 sData$END_DATE <- strptime(sData$END_DATE, "%m/%d/%Y %H:%M:%S")
-```
+```  
+  
+Convert the damage values so they all take the multipliers into consideration and resolve to a $million value.  
+  
+```{r updateValues}
+upVal <- data.frame(PROPDMGEXP = c("K", "M", "B"), multP = c(1000, 1000000, 1000000000))
+sData <- merge(sData, upVal, by = "PROPDMGEXP")
+sData$PROPDMG_M <- (sData$PROPDMG * sData$multP)/1000000000
 
+upVal <- data.frame(CROPDMGEXP = c("K", "M", "B"), multC = c(1000, 1000000, 1000000000))
+sData <- merge(sData, upVal, by = "CROPDMGEXP")
+sData$CROPDMG_M <- (sData$CROPDMG * sData$multC)/1000000000
+
+sData$TOTALDMG_M <- sData$PROPDMG_M + sData$CROPDMG_M
+
+```
+  
 ### Results
-##### 1. Across the United States, which types of events (as indicated in the EVTYPE variable) are most harmful with respect to population health?
+#### 1. Across the United States, which types of events (as indicated in the EVTYPE variable) are most harmful with respect to population health?
 
 Impact to population health will be gauged by reference to the following variables:  
   
@@ -58,8 +80,8 @@ Impact to population health will be gauged by reference to the following variabl
 This process derives a set of data to show us the 10 *EVTYPE* values that are associated to the highest number of deaths, as recorded in the *FATALITIES* field.
 
 ```{r deaths}
-library(dplyr)
-library(ggplot2)
+require(dplyr)
+require(ggplot2)
 
 allDeaths <- sum(sData$FATALITIES, na.rm = TRUE)
 
@@ -79,7 +101,7 @@ ggplot(mostDeaths, aes(x = reorder(EVTYPE, desc(tDeaths)), y = tDeaths, fill = E
         labs(title = "Top 10 causes of death by storm event ('EVTYPE')")
 ```
   
-The top 10 events account for `r sprintf("%.1f%%", 100*sum(mostDeaths$pc))` of all recorded deaths in the dataset.
+The top 10 events account for `r sprintf("%.1f%%", 100 * sum(mostDeaths$pc))` of all recorded deaths in the dataset.  The most serious event is `r head(mostDeaths$EVTYPE, 1)` which is responsible for `r sprintf("%.1f%%", 100 * head(mostDeaths$pc, 1))` of deaths.
   
 Then we can derive a set of data to show us the 10 *EVTYPE* values that are associated to the highest number of deaths, as recorded in the *INJURIES* field.
   
@@ -102,8 +124,38 @@ ggplot(mostInjuries, aes(x = reorder(EVTYPE, desc(tInjuries)), y = tInjuries, fi
         labs(title = "Top 10 causes of injury by storm event ('EVTYPE')")
 ```
 
-The top 10 events account for `r sprintf("%.1f%%", 100*sum(mostInjuries$pc))` of all recorded injuries in the dataset.
+The top 10 events account for `r sprintf("%.1f%%", 100 * sum(mostInjuries$pc))` of all recorded injuries in the dataset.  The most serious event is `r head(mostInjuries$EVTYPE, 1)` which is responsible for `r sprintf("%.1f%%", 100 * head(mostInjuries$pc, 1))` of injuries.  
+  
+#### 2. Across the United States, which types of events have the greatest economic consequences?
 
-##### 2. Across the United States, which types of events have the greatest economic consequences?
+Economic losses are quantified in the dataset by reference to the following:  
+  
+* PROPDMG: Damage to property.  
+* CROPDMG: Damage to crops.  
+  
+Multipliers are contained in the dataset which indicate whether the recorded costs are in thousands, millions or billions.  Other values are contained in the dataset but have been ignored for the purposes of this analysis.  
+  
+Where a multiplier is available it has been used to derive cost in billions  Property and crop damage has been added together to derive total damage. No adjustments have been made for inflation.
+  
+```{r economic}
+require(scales)
+allEcon <- sum(sData$TOTALDMG_M, na.rm = TRUE)
 
-Results here
+tEcon <- sData %>% 
+                group_by(EVTYPE) %>%
+                summarise(tEcon = sum(TOTALDMG_M)) %>%
+                arrange(desc(tEcon))
+mostEcon <- head(tEcon, 10)
+mostEcon$pc <- mostEcon$tEcon / allEcon
+
+ggplot(mostEcon, aes(x = reorder(EVTYPE, desc(tEcon)), y = tEcon, fill = EVTYPE)) +
+        geom_bar(stat = 'identity', position = "identity") +
+        guides(fill = FALSE) +
+        theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) + 
+        xlab(NULL) +
+        ylab("Total Cost ($bn)") +
+        scale_y_continuous(labels = comma) +
+        labs(title = "Top 10 causes of economic loss by storm event ('EVTYPE')")
+```
+
+The top 10 events account for `r sprintf("%.1f%%", 100 * sum(mostEcon$pc))` of all economic losses recorded in the dataset.  The most serious event is `r head(mostEcon$EVTYPE, 1)` which is responsible for `r sprintf("%.1f%%", 100 * head(mostEcon$pc, 1))` of the total recorded economic cost.
